# rust-to-do-app

./: .gitignore  Cargo.toml  README.md  requirements.md  tasks.csv
.github/workflows/: qodana.yml  rust-clippy.yml  rust.yml
src/: command.rs  configuration.rs  main.rs  naive_date_time_wrapper.rs  persistence.rs  supported_persistence.rs  task.rs  task_list.rs  task_status.rs
