[package]
name = "rust-console-to-do"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
chrono = "0.4.24"
colorize = "0.1.0"
csv = "1.2.1"
serde = { version = "1", features = ["derive"] }
serde_derive = "1.0"
